[package]
name = "binance_bot"
version = "0.1.0"
authors = ["GoldFoxXD <frolvanya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
select = "0.5.0"
dotenv = "0.15.0"
reqwest = "0.11.3"
scraper = "0.12.0"
dotenv_codegen = "0.15.0"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] } 
